--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('https://cdn.pixabay.com/photo/2017/07/13/08/59/greenhouse-2499758_1280.jpg');
+  background-image: url("https://cdn.pixabay.com/photo/2017/07/13/08/59/greenhouse-2499758_1280.jpg");
   background-size: 100% 100%;
   background-position: center;
   filter: brightness(0.8);
@@ -30,14 +30,14 @@
   justify-content: center;
   height: 100vh;
   width: 100vw;
- top: 100px;
+  top: 100px;
   backdrop-filter: blur(4px);
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0, 0, 0, 0.5);
   gap: 20px;
 }
 
 .landing_content {
- margin-top: 430px;
+  margin-top: 430px;
   margin-left: 100px;
   transform: translate(-50%, -50%);
   z-index: 1;
@@ -58,12 +58,12 @@
 }
 
 .content h1 {
-  font-size: 48px;
+  font-size: 3rem;
   margin-bottom: 10px;
 }
 
 .content p {
-  font-size: 25px;
+  font-size: 1.5625rem;
 }
 
 .divider {
@@ -75,7 +75,7 @@
 
 .get-started-button {
   padding: 15px 25px;
-  font-size: 23px;
+  font-size: 1.4375rem;
   border: none;
   border-radius: 5px;
   background-color: #4caf50;
